LPS-60925 Fixes the overlapping of field name

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -133,6 +133,13 @@ $horizontal-spacing: 35px;
 			.key-value-output {
 				color: #869CAD;
 			}
+
+			.key-value-output {
+				display: inline-block;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				width: 100%;
+			}
 		}
 
 		.liferay-ddm-form-field-checkbox,
